[workspace]
members = [
    "lib/av-encoder",
    "lib/cache",
    "lib/wasm-runtime",
    "lib/wasm-runtime-types",
    "lib/wasm-logic-db",
    "lib/wasm-logic-fs",
    "lib/wasm-logic-http",
    "lib/wasm-logic-graphics",
    "lib/ui-wasm-manager",
    "lib/native",
    "lib/network",
    "lib/base",
    "lib/base-fs",
    "lib/base-http",
    "lib/base-io-traits",
    "lib/base-io",
    "lib/config",
    "lib/config-fs",
    "lib/config-macro",
    "lib/hiarc",
    "lib/hiarc-macro",
    "lib/graphics",
    "lib/graphics-backend",
    "lib/graphics-backend-traits",
    "lib/graphics-types",
    "lib/graphics-base-traits",
    "lib/api",
    "lib/api-wasm-macros",
    "lib/api-macros",
    "lib/api-ui",
    "lib/image",
    "lib/pool",
    "lib/sound",
    "lib/sql",
    "lib/ui-base",
    "lib/ui-generic",
    "examples/wasm-modules/actionfeed",
    "examples/wasm-modules/ui",
    "examples/wasm-modules/state",
    "examples/wasm-modules/render-game",
    "examples/wasm-modules/scoreboard",
    "examples/wasm-modules/chat",
    "examples/wasm-modules/emote_wheel",
    "examples/wasm-modules/prediction_timer_ui",
    "examples/wasm-modules/vote",
    "examples/wasm-modules/hud",
    "examples/wasm-modules/demo_player",
    "examples/wasm-modules/console",
    "examples/wasm-modules/connecting",
    "examples/wasm-modules/motd",
    "examples/wasm-modules/graphics",
    "examples/wasm-modules/mainmenu",
    "examples/wasm-modules/ingame_menu",
    "src/server-bin",
    "src/emoticon-convert",
    "src/game-convert",
    "src/hud-convert",
    "src/skin-convert",
    "src/part-convert",
    "src/master-server",
    "game/client-extra",
    "game/client-map",
    "game/client-render-base",
    "game/client-render",
    "game/client-types",
    "game/client-containers",
    "game/client-ui",
    "game/server",
    "lib/game-database",
    "game/game-base",
    "game/vanilla",
    "game/game-network",
    "game/render-game-wasm",
    "game/api-state",
    "game/api-ui-game",
    "game/master-server-types",
    "game/game-config",
    "game/game-config-fs",
    "game/client-render-game",
    "game/client-console",
    "game/api-render-game",
    "game/demo",
    "game/client-demo",
    "game/editor",
    "src/map-convert",
    "game/map-convert-lib",
    "lib/sound-backend",
    "lib/wasm-logic-sound", "game/api-editor",
    "examples/wasm-modules/editor_wasm",
    "examples/lib-modules/editor-lib",
    "game/egui-timeline",
    "game/game-interface",
    "game/map",
    "lib/bin-patch",
    "game/binds",
    "game/client-accounts", 
    "lib/game-database-backend",
    "lib/game-database-macros",
    "game/http-accounts",
    "lib/command-parser",
    "src/dilate",
    "game/prediction-timer",
    "lib/microphone",
    "lib/steam",
    "game/game-state-wasm", "lib/native-display", "src/assets-server", "game/assets-base", "src/community-server",
    "src/community-register-server",
    "game/community", "lib/input-binds", "game/ghost", "game/client-ghost", "game/client-replay", "game/editor-wasm",
]

[package]
name = "ddnet-rs"
description = "DDraceNetwork, a free cooperative platformer game"
version = "0.1.0"
edition = "2021"
publish = false

# :/ https://github.com/rust-mobile/xbuild/issues/161
[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "ddnet-rs"
path = "src/lib.rs"

[dependencies]
ui-wasm-manager = { path = "lib/ui-wasm-manager" }
native = { path = "lib/native" }
input-binds = { path = "lib/input-binds" }
network = { path = "lib/network" }
math = { path = "lib/math" }
base = { path = "lib/base" }
base-fs = { path = "lib/base-fs" }
base-http = { path = "lib/base-http" }
base-io = { path = "lib/base-io" }
config = { path = "lib/config" }
config-fs = { path = "lib/config-fs" }
graphics = { path = "lib/graphics" }
graphics-backend = { path = "lib/graphics-backend" }
graphics-types = { path = "lib/graphics-types" }
image = { path = "lib/image" }
sound = { path = "lib/sound" }
sound-backend = { path = "lib/sound-backend" }
microphone = { path = "lib/microphone" }
ui-base = { path = "lib/ui-base" }
ui-generic = { path = "lib/ui-generic" }
pool = { path = "lib/pool" }
bin-patch = { path = "lib/bin-patch" }
steam = { path = "lib/steam" }
command-parser = { path = "lib/command-parser" }

game-config = { path = "game/game-config" }
game-config-fs = { path = "game/game-config-fs" }
client-accounts = { path = "game/client-accounts" }
client-render-base = { path = "game/client-render-base" }
client-render-game = { path = "game/client-render-game" }
client-console = { path = "game/client-console" }
client-map = { path = "game/client-map" }
client-types = { path = "game/client-types" }
client-containers = { path = "game/client-containers" }
client-ui = { path = "game/client-ui", features = ["binds"] }
demo = { path = "game/demo", features = ["recorder"] }
client-demo = { path = "game/client-demo" }
client-replay = { path = "game/client-replay" }
ghost = { path = "game/ghost" }
client-ghost = { path = "game/client-ghost" }
server = { path = "game/server", default-features = false }
game-base = { path = "game/game-base" }
game-interface = { path = "game/game-interface" }
game-network = { path = "game/game-network" }
binds = { path = "game/binds" }
prediction-timer = { path = "game/prediction-timer" }
editor-wasm = { path = "game/editor-wasm", default-features = false }
game-state-wasm = { path = "game/game-state-wasm" }
editor = { path = "game/editor", default-features = false }

egui-winit = { version = "0.30.0", default-features = false, features = ["x11", "arboard", "links"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "sync", "fs", "time", "macros"] }
num = "0.4.3"
arrayvec = "0.7.6"
egui = { version = "0.30.0", default-features = false, features = ["serde"] }
rayon = "1.10.0"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
bytes = "1.9.0"
egui_extras = { version = "0.30.0" }
emath = "0.30.0"
fixed = "1.28.0"
serde = "1.0.217"
serde-value = "0.7.0"
serde_json = "1.0.134"
hashlink = { git = "https://github.com/Jupeyy/hashlink/", branch = "ddnet", features = ["serde", "serde_impl"] }
anyhow = { version = "1.0.95", features = ["backtrace"] }
parking_lot = "0.12.3"
thread-priority = "1.2.0"
hiarc = { path = "lib/hiarc", features = ["derive"] }
trybuild = "1.0"
env_logger = "0.11.6"
rand = { version = "0.8.5", features = ["std_rng"], default-features = false }
url = "2.5.4"
log = "0.4.22"
x509-cert = { version = "0.2.5" }
alloc-track = { version = "0.3.1", optional = true }
crossbeam = "0.8.4"
chrono = { version = "0.4.39", features = ["serde"] }
egui-notify = { git = "https://github.com/ItsEthra/egui-notify", rev = "3a25512d43f04354686c796d1fd5295b3ca854e0" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"
ndk = { version = "0.9.0", default-features = false }

[dev-dependencies]
graphics-base-traits = { path = "lib/graphics-base-traits" }
graphics-backend-traits = { path = "lib/graphics-backend-traits" }
client-render-game = { path = "game/client-render-game" }
client-render = { path = "game/client-render" }
vanilla = { path = "game/vanilla" }
map = { path = "game/map" }

# super slow in debug
[profile.dev.package.blake3]
opt-level = 3
[profile.dev.package.tract-core]
opt-level = 3

[features]
bundled_data_dir = ["base-fs/bundled_data_dir"]
legacy = ["server/legacy", "editor-wasm/legacy", "editor/legacy"]
enable_steam = ["steam/runtime"]
microphone = ["microphone/cpal_opus"]
ffmpeg = ["client-demo/ffmpeg"]

alloc_track = ["alloc-track"]

default = ["legacy"]

#[profile.release]
#lto = true
#opt-level = 3
#codegen-units = 1
#debug = true
#strip = true
#panic = "abort"

[package.metadata.bundle]
short_description = "DDraceNetwork, a free cooperative platformer game"
long_description = """
DDraceNetwork (DDNet) is an actively maintained version of DDRace, a Teeworlds modification with a unique cooperative gameplay.
Help each other play through custom maps, compete against the best in international tournaments, design your own maps, or run your own server.
The official servers are around the world.
All ranks made on official servers are available worldwide and you can collect points!
"""
