[package]
name = "api-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
editor = { path = "../editor" }
api-wasm-macros = { path = "../../lib/api-wasm-macros" }
api = { path = "../../lib/api" }
graphics-types = { path = "../../lib/graphics-types" }
config = { path = "../../lib/config" }
once_cell = "1.20.2"
egui = { version = "0.30.0", default-features = false, features = ["serde"] }
