[package]
name = "client-accounts"
version = "0.1.0"
edition = "2021"

[dependencies]
base-io = { path = "../../lib/base-io" }
steam = { path = "../../lib/steam" }

client-ui = { path = "../client-ui" }
http-accounts = { path = "../http-accounts" }

ddnet-accounts-shared = { version = "0.2.0" }
ddnet-account-client-http-fs = { version = "0.2.0" }
async-trait = "0.1.83"
url = { version = "2.5.4", features = ["serde"] }
anyhow = { version = "1.0.95", features = ["backtrace"] }
email_address = { version = "0.2.9", features = ["serde"] }
chrono = { version = "0.4.39" }
serde_json = "1.0.134"
