[package]
name = "client-console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binds = { path = "../binds" }
client-ui = { path = "../client-ui" }
client-types = { path = "../client-types" }
game-config = { path = "../game-config" }
client-render-base = { path = "../client-render-base" }
game-interface = { path = "../game-interface" }
client-containers = { path = "../client-containers" }

base = { path = "../../lib/base" }
config = { path = "../../lib/config" }
graphics = { path = "../../lib/graphics" }
hiarc = { path = "../../lib/hiarc", features = ["derive"] }
ui-base = { path = "../../lib/ui-base" }
ui-generic = { path = "../../lib/ui-generic" }
command-parser = { path = "../../lib/command-parser" }

egui = { version = "0.30.0", default-features = false, features = ["serde"] }
anyhow = { version = "1.0.95", features = ["backtrace"] }
log = "0.4.22"
