[package]
name = "client-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
av-encoder = { path = "../../lib/av-encoder" }
base-io = { path = "../../lib/base-io" }
base = { path = "../../lib/base" }
math = { path = "../../lib/math" }
config = { path = "../../lib/config" }
graphics = { path = "../../lib/graphics" }
graphics-types = { path = "../../lib/graphics-types" }
graphics-backend = { path = "../../lib/graphics-backend" }
pool = { path = "../../lib/pool" }
hiarc = { path = "../../lib/hiarc" }
ui-base = { path = "../../lib/ui-base" }
ui-generic = { path = "../../lib/ui-generic" }
sound = { path = "../../lib/sound" }
sound-backend = { path = "../../lib/sound-backend" }
bin-patch = { path = "../../lib/bin-patch" }

demo = { path = "../demo", features = ["recorder"] }
client-map = { path = "../client-map" }
client-ui = { path = "../client-ui" }
game-base = { path = "../game-base" }
game-interface = { path = "../game-interface" }
client-render-game = { path = "../client-render-game" }
client-render-base = { path = "../client-render-base" }
game-config = { path = "../game-config" }

serde = { version = "1.0.217", features = ["derive"] }
anyhow = { version = "1.0.95", features = ["backtrace"] }
rayon = "1.10.0"
egui = { version = "0.30.0", default-features = false, features = ["serde"] }
log = "0.4.22"

[features]
ffmpeg = ["av-encoder/ffmpeg"]
