[package]
name = "client-ghost"
version = "0.1.0"
edition = "2021"

[dependencies]
base-io = { path = "../../lib/base-io" }
base-io-traits = { path = "../../lib/base-io-traits" }
base = { path = "../../lib/base" }
config = { path = "../../lib/config" }
graphics = { path = "../../lib/graphics" }
graphics-backend = { path = "../../lib/graphics-backend" }
pool = { path = "../../lib/pool" }
ui-base = { path = "../../lib/ui-base" }
sound = { path = "../../lib/sound" }
sound-backend = { path = "../../lib/sound-backend" }

client-demo = { path = "../client-demo", default-features = false }
game-config = { path = "../game-config" }
client-render-game = { path = "../client-render-game" }
game-interface = { path = "../game-interface" }
rayon = "1.10.0"

log = "0.4.22"
