[package]
name = "client-map"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../../lib/base" }
base-io = { path = "../../lib/base-io" }
config = { path = "../../lib/config" }
graphics = { path = "../../lib/graphics" }
graphics-backend = { path = "../../lib/graphics-backend" }
game-database = { path = "../../lib/game-database" }
sound = { path = "../../lib/sound" }
pool = { path = "../../lib/pool" }

game-base = { path = "../game-base" }
game-interface = { path = "../game-interface" }
map = { path = "../map" }
client-render-base = { path = "../client-render-base" }
client-render-game = { path = "../client-render-game" }
render-game-wasm = { path = "../render-game-wasm" }
game-state-wasm = { path = "../game-state-wasm" }

rayon = "1.10.0"
anyhow = { version = "1.0.95", features = ["backtrace"] }
wasmparser = "0.222.0"
log = "0.4.22"
