[package]
name = "client-render-base"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../../lib/base" }
base-io = { path = "../../lib/base-io" }
math = { path = "../../lib/math" }
config = { path = "../../lib/config" }
graphics-backend-traits = { path = "../../lib/graphics-backend-traits" }
graphics = { path = "../../lib/graphics" }
graphics-types = { path = "../../lib/graphics-types" }
hiarc = { path = "../../lib/hiarc", features = ["derive"] }
pool = { path = "../../lib/pool" }
sound = { path = "../../lib/sound" }
image = { path = "../../lib/image" }

client-containers = { path = "../client-containers" }
game-base = { path = "../game-base" }
vanilla = { path = "../vanilla" }
map = { path = "../map" }
game-config = { path = "../game-config" }
game-interface = { path = "../game-interface" }

hashlink = { git = "https://github.com/Jupeyy/hashlink/", branch = "ddnet", features = ["serde", "serde_impl"] }

serde = { version = "1.0.217", features = ["derive"] }
rayon = "1.10.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
anyhow = { version = "1.0.95", features = ["backtrace"] }
time = { version = "0.3.37", features = ["serde"] }
fixed = "1.28.0"
log = "0.4.22"
url = { version = "2.5.4", features = ["serde"] }
futures = "0.3.31"
