[package]
name = "client-render"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../../lib/base" }
graphics-types = { path = "../../lib/graphics-types" }
graphics = { path = "../../lib/graphics" }
ui-base = { path = "../../lib/ui-base" }
ui-generic = { path = "../../lib/ui-generic" }
math = { path = "../../lib/math" }
game-interface = { path = "../game-interface" }
game-base = { path = "../game-base" }
client-ui = { path = "../client-ui" }
client-render-base = { path = "../client-render-base" }
client-types = { path = "../client-types" }
client-containers = { path = "../client-containers" }

egui = { version = "0.30.0", default-features = false, features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
