[package]
name = "client-replay"
version = "0.1.0"
edition = "2021"

[dependencies]
base-io = { path = "../../lib/base-io" }

client-demo = { path = "../client-demo", default-features = false }
demo = { path = "../demo", features = ["recorder"] }
game-interface = { path = "../game-interface" }

rayon = "1.10.0"
anyhow = { version = "1.0.95", features = ["backtrace"] }
egui = { version = "0.30.0", default-features = false, features = ["serde"] }
