[package]
name = "client-types"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../../lib/base" }
config = { path = "../../lib/config" }
game-base = { path = "../game-base" }
game-config = { path = "../game-config" }
game-interface = { path = "../game-interface" }

command-parser = { path = "../../lib/command-parser" }

serde = { version = "1.0.217", features = ["derive"] }
anyhow = { version = "1.0.95", features = ["backtrace"] }
