[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../../lib/base" }
math = { path = "../../lib/math" }
config = { path = "../../lib/config" }
network = { path = "../../lib/network" }
ui-base = { path = "../../lib/ui-base" }
ui-generic = { path = "../../lib/ui-generic" }
base-io = { path = "../../lib/base-io" }
base-io-traits = { path = "../../lib/base-io-traits" }
image = { path = "../../lib/image" }
graphics = { path = "../../lib/graphics" }
graphics-types = { path = "../../lib/graphics-types" }
hiarc = { path = "../../lib/hiarc", features = ["derive"] }
pool = { path = "../../lib/pool" }
sound = { path = "../../lib/sound" }

egui-timeline = { path = "../egui-timeline" }
map = { path = "../map" }
client-containers = { path = "../client-containers" }
client-render-base = { path = "../client-render-base" }
game-config = { path = "../game-config" }
game-interface = { path = "../game-interface" }
game-base = { path = "../game-base" }

map-convert-lib = { path = "../map-convert-lib", optional = true }

egui = { version = "0.30.0", default-features = false, features = ["serde"] }
egui_extras = { version = "0.30.0" }
egui-file-dialog = { version = "0.8.0", default-features = false }
egui_commonmark = "0.19.0"
async-trait = "0.1.83"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "sync", "fs", "time", "macros"] }
anyhow = { version = "1.0.95", features = ["backtrace"] }
rayon = "1.10.0"
rand = { version = "0.8.5", features = ["std_rng"], default-features = false }
time = { version = "0.3.37", features = ["serde"] }
serde_json = "1.0.134"
ed25519-dalek = { version = "2.1.1", features = ["serde"] }
x509-cert = { version = "0.2.5" }

[features]
legacy = ["map-convert-lib"]

default = ["legacy"]
