[package]
name = "game-config"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { path = "../../lib/config" }

game-interface = { path = "../game-interface" }

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
anyhow = { version = "1.0.95", features = ["backtrace"] }
