[package]
name = "game-network"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../../lib/base" }
network = { path = "../../lib/network" }
pool = { path = "../../lib/pool" }

game-base = { path = "../game-base" }
game-interface = { path = "../game-interface" }

bincode = { features = ["serde"], version = "2.0.0-rc.3" }
async-trait = "0.1.83"
serde = "1.0.217"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "sync", "time", "macros"] }
log = "0.4.22"
