[package]
name = "map-convert-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../../lib/base" }
base-io = { path = "../../lib/base-io" }
image = { path = "../../lib/image" }
game-base = { path = "../../game/game-base" }
map = { path = "../../game/map" }
rayon = "1.10.0"
anyhow = { version = "1.0.95", features = ["backtrace"] }
oxipng = { version = "9.1", features = ["parallel"], default-features = false }
ogg-opus = "0.1.2"
vorbis_rs = { version = "0.5.5", default-features = false }

[dev-dependencies]
base-fs = { path = "../../lib/base-fs" }
base-io = { path = "../../lib/base-io" }
difference = "2.0"
rustc-hash = "2.1.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
