[package]
name = "map"
version = "0.1.0"
edition = "2021"

[dependencies]
math = { path = "../../lib/math" }
base = { path = "../../lib/base" }
hiarc = { path = "../../lib/hiarc", features = ["enable_time", "enable_hashlink"] }
rayon = "1.10.0"
bincode = { features = ["serde"], version = "2.0.0-rc.3" }
zstd = { version = "0.13", default-features = false, features = ["experimental", "zdict_builder"] }
anyhow = { version = "1.0.95", features = ["backtrace"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
time = { version = "0.3.37", features = ["serde"] }
is_sorted = "0.1.1"
hashlink = { git = "https://github.com/Jupeyy/hashlink/", branch = "ddnet", features = ["serde", "serde_impl"] }
bitflags = { version = "2.6.0", features = ["serde"] }

ruzstd = { version = "0.8.0", optional = true }

[features]
rust_zstd = ["dep:ruzstd"] # enables a pure rust zstd decoder, which is much slower, but allows tests with miri

[dev-dependencies]
base-fs = { path = "../../lib/base-fs" }
base-io = { path = "../../lib/base-io" }
difference = "2.0"
lz4_flex = { version = "0.11" }
brotli = "7.0.0"
#rust-lzma = "0.6.0"
flate2 = "1.0.35"
