[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../../lib/base" }
base-fs = { path = "../../lib/base-fs" }
base-http = { path = "../../lib/base-http" }
base-io = { path = "../../lib/base-io" }
base-io-traits = { path = "../../lib/base-io-traits" }
network = { path = "../../lib/network" }
bin-patch = { path = "../../lib/bin-patch" }
config = { path = "../../lib/config" }
config-fs = { path = "../../lib/config-fs" }
pool = { path = "../../lib/pool" }
cache = { path = "../../lib/cache" }
command-parser = { path = "../../lib/command-parser" }

sql = { path = "../../lib/sql" }
game-database = { path = "../../lib/game-database" }
game-database-backend = { path = "../../lib/game-database-backend" }

game-base = { path = "../game-base" }
vanilla = { path = "../vanilla" }
game-interface = { path = "../game-interface" }
game-network = { path = "../game-network" }
map = { path = "../map" }
game-config = { path = "../game-config" }
game-config-fs = { path = "../game-config-fs" }
master-server-types = { path = "../master-server-types" }
http-accounts = { path = "../http-accounts" }
demo = { path = "../demo", features = ["recorder"] }

game-state-wasm = { path = "../game-state-wasm" }
map-convert-lib = { path = "../map-convert-lib", optional = true }

ddnet-account-game-server = { version = "0.3.0", features = ["sqlite"] }
ddnet-accounts-shared = { version = "0.2.0" }
ddnet-account-client-http-fs = { version = "0.2.0" }

rayon = "1.10.0"
anyhow = { version = "1.0.95", features = ["backtrace"] }
difference = "2.0"
rand = { version = "0.8.5", features = ["std_rng"], default-features = false }
x509-cert = { version = "0.2.5" }
ed25519-dalek = { version = "2.1.1" }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
serde_json = "1.0.134"
serde = { version = "1.0.217", features = ["derive"] }
log = "0.4.22"
thread-priority = "1.2.0"
chrono = { version = "0.4.39", features = ["serde"] }
async-trait = "0.1.83"
rustc-hash = "2.1.0"
futures = "0.3.31"
either = "1.13.0"

[features]
legacy = ["map-convert-lib"]

default = ["legacy"]
