[package]
name = "vanilla"
version = "0.1.0"
edition = "2021"

[dependencies]
game-base = { path = "../game-base" }
game-interface = { path = "../game-interface" }
map = { path = "../map" }

command-parser = { path = "../../lib/command-parser" }
math = { path = "../../lib/math" }
base = { path = "../../lib/base" }
base-io = { path = "../../lib/base-io" }
pool = { path = "../../lib/pool", features = ["enable_hiarc"] }
hiarc = { path = "../../lib/hiarc", features = ["derive", "enable_hashlink", "enable_rustc_hash"] }
game-database = { path = "../../lib/game-database" }
config = { path = "../../lib/config" }

ddnet-accounts-types = { version = "0.1.0" }

num = "0.4.3"
num-traits = "0.2.19"
num-derive = "0.4.2"
bincode = { features = ["serde"], version = "2.0.0-rc.3" }
anyhow = { version = "1.0.95", features = ["backtrace"] }
hashlink = { git = "https://github.com/Jupeyy/hashlink/", branch = "ddnet", features = ["serde", "serde_impl"] }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.9"
log = "0.4.22"
chrono = { version = "0.4.39", default-features = false, features = ["serde"] }
serde_json = "1.0.134"
rustc-hash = "2.1.0"
bitflags = { version = "2.6.0", features = ["serde"] }

[dev-dependencies]
map = { path = "../map", features = ["rust_zstd"] }
